--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -292,7 +292,7 @@ span.fancytree-node.fancytree-folder.fancytree-expanded > span.fancytree-icon:ho
 <body>
 
 <div id="header">
-مكتبة الخلفيات والصور والعناصر عالية الجودة<br />Directories: 5,962, Files: 42,436, Size: 3.5~ TB
+مكتبة الكورسات التعليمية بريميوم<br />Directories: 5,962, Files: 42,436, Size: 3.9~ TB
 </div>
 
 
